--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.28",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -20,6 +22,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-plugin-component": "^1.1.1",
-    "vue-cli-plugin-element-plus": "~0.0.13"
+    "style-resources-loader": "^1.5.0",
+    "vue-cli-plugin-element-plus": "~0.0.13",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5"
   }
 }
