--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-plus": "^1.0.2-beta.28",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "vue": "^3.0.0",
+    "mitt": "^3.0.0",
+    "vue": "^3.2.30",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
