--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mitt": "^3.0.0",
+    "moment": "^2.29.1",
     "vue": "^3.2.30",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
